2006-02-06:
	* src/options.c,src/options.h: break down and add an explicit option
	for disabling v4-via-as-req attempts
	* src/minikafs.c: don't try to convert creds for use in setting v4
	tokens when krb4_convert_524 is disabled.
	* src/v4.c: don't try to get initial creds if krb4_use_as_req is off.
	* src/pam_krb5.5.in,src/pam_krb5.8.in: document krb4_use_as_req.

2006-01-26:
	* src/minikafs.c: wrap a debug message in an if (debugging) clause.
	* src/session.c: wrap a pair of debugging messages in an if (debugging)
	clause (#179037).
	* configure.ac: if $with_gnu_ld is set, set SYMBOLIC_LINKER_FLAG to
	the right variation on -Bsymbolic
	* src/Makefile.am: use the SYMBOLIC_LINKER_FLAG when linking modules

2006-01-16:
	* src/afs5log.1, src/pagsh.1: fix the bug reporting instructions.

2006-01-16:
	* src/password.c(pam_sm_chauthtok): fix handling of no-password-given
	cases.
	* src/harness.c: work around Linux-PAM actively trying to keep us from
	doing what we're doing.  Adjust command-line parsing to allow both
	password-change phases to be called out.
	* tests/run-tests.c: add a password-not-good-enough-at-change-time
	test case.
	* src/password.c(pam_sm_chauthtok): cast away a couple of compiler
	warnings.
	* src/Makefile.am: tweak dependencies on dummy files for the sake of
	distcheck.

2006-01-13:
	* src/log.h,src/log.c,src/logstdio.c: add notice_user() to for spewing
	an error message at the user.
	* src/password.c(pam_sm_chauthtok): if we got a result string back from
	the password-changing server, attempt to display it.

2006-01-11:
	* src/session.c: no, I did touch that file last year.
	* src/pam_krb5.5.in: document the "ignore_afs" option.
	* src/pam_newpag.c: add.
	* src/pam_newpag.5.in: add.
	* src/pam_newpag.8.in: add.
	* src/Makefile.am: add rules for building pam_newpag.so.
	* configure.ac: generate man pages for pam_newpag.
	* src/pam_dummy_acct.c: add.
	* src/pam_dummy_chauthtok.c: add.
	* src/Makefile.am: add rules for building harness-newpag